--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <link href="//db.onlinewebfonts.com/c/1b6fc211ac8965244816cc37de9fbe77?family=Soho+Gothic+Pro" rel="stylesheet" type="text/css"/> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
